# HSEedu

./: README.md  bookProgramme.cpp  capuchino.cpp  iro4katranziro4ka.cpp  tempCodeRunnerFile.cpp
10lab/: 10lab.cpp  отчет10лабаМихайленкоСКБ252.docx
11lab/: 11lab.cpp  Отчет_Лаб11_Михайленко_СКБ252.docx
12lab/: 12lab.cpp  отчет12лабаМихайленкоСКБ252.docx
1lab/: bookProgramme.cpp  expansesProgramme.c  expenses.txt  отчет1.2лабаМихайленкоСКБ252.docx  отчет1лабаМихайленкоСКБ252.docx
2-3lab/: p2-3.cpp  t.cpp  отчет2-3лабаМихайленкоСКБ252.docx
4lab/: p4.cpp  p4extra.cpp  t.cpp  отчет4лабаМихайленкоСКБ252.docx
5-6lab/: отчет5-6лабаМихайленкоСКБ252.docx
7-8lab/: .gitignore  CMakeLists.txt  отчет7-8лабаМихайленкоСКБ252.docx
7-8lab/src/: ListNode.h  PCB.h  ProcessList.cpp  ProcessList.h  main.cpp
9lab/: 9lab.cpp  отчет9лабаМихайленкоСКБ252.docx
aud/: t.cpp
hw25_2/hw25_21/: hw.cpp  МихайленкоЕП_СКБ252.md
inf/p3/: 1.py
