cmake_minimum_required(VERSION 3.10)

project(ProcessManager LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(process_manager
    src/main.cpp
    src/ProcessList.cpp
)

target_include_directories(process_manager
    PRIVATE
        ${CMAKE_SOURCE_DIR}/src
)
